CloudFormation/Fault Tolerant Wordpress.yaml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  'AWS::CloudFormation::Designer':
    37895652-3013-4912-a62b-7397f57cc016:
      size:
        width: 450
        height: 450
      position:
        x: 240
        'y': 70
      z: 0
      embeds:
        - 3eaf1acb-f3e4-43e9-985b-04ba7f3fea31
        - c70135ad-ad56-4037-9161-7885c1babb50
        - 01326c75-c2d3-4eea-9384-38308d2e60c0
        - b1c5f67e-d30a-493a-8ea4-2a18b9fd2882
    b1c5f67e-d30a-493a-8ea4-2a18b9fd2882:
      size:
        width: 200
        height: 230
      position:
        x: 250
        'y': 170
      z: 1
      parent: 37895652-3013-4912-a62b-7397f57cc016
      embeds:
        - 0f31f036-fbe6-44e4-aff1-cc13b8c2a364
      iscontainedinside:
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
    01326c75-c2d3-4eea-9384-38308d2e60c0:
      size:
        width: 210
        height: 230
      position:
        x: 460
        'y': 170
      z: 1
      parent: 37895652-3013-4912-a62b-7397f57cc016
      embeds:
        - 68c2d1f1-d954-4978-86fc-ca248c825751
      iscontainedinside:
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
    c70135ad-ad56-4037-9161-7885c1babb50:
      size:
        width: 60
        height: 60
      position:
        x: 272
        'y': 92
      z: 1
      parent: 37895652-3013-4912-a62b-7397f57cc016
      embeds: []
      iscontainedinside:
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
    3eaf1acb-f3e4-43e9-985b-04ba7f3fea31:
      size:
        width: 60
        height: 60
      position:
        x: 264
        'y': 429
      z: 1
      parent: 37895652-3013-4912-a62b-7397f57cc016
      embeds: []
      iscontainedinside:
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
        - 37895652-3013-4912-a62b-7397f57cc016
    0f31f036-fbe6-44e4-aff1-cc13b8c2a364:
      size:
        width: 60
        height: 60
      position:
        x: 320
        'y': 210
      z: 2
      parent: b1c5f67e-d30a-493a-8ea4-2a18b9fd2882
      embeds: []
    68c2d1f1-d954-4978-86fc-ca248c825751:
      size:
        width: 60
        height: 60
      position:
        x: 530
        'y': 210
      z: 2
      parent: 01326c75-c2d3-4eea-9384-38308d2e60c0
      embeds: []
    4c36fbbd-21cc-4ef2-a3c6-8c8c9bda2859:
      size:
        width: 60
        height: 60
      position:
        x: 730
        'y': 180
      z: 0
      embeds: []
    b231a9ba-118e-4556-b2f7-ada6a768b920:
      size:
        width: 60
        height: 60
      position:
        x: 730
        'y': 300
      z: 0
      embeds: []
Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.168.0.0/16
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 37895652-3013-4912-a62b-7397f57cc016
  Subnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 192.168.0.0/24
      AvailabilityZone: "eu-west-1a"
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b1c5f67e-d30a-493a-8ea4-2a18b9fd2882
  Subnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 192.168.1.0/24
      AvailabilityZone: "eu-west-1b"
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 01326c75-c2d3-4eea-9384-38308d2e60c0
  WebSG:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref MyVPC
      GroupDescription: Web front ends are open to traffic on port 80 for HTTP from all IPs and from to SSH traffic on port 22 from all IPs. Harden for real life, please.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c70135ad-ad56-4037-9161-7885c1babb50
  RDSSG:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref MyVPC
      GroupDescription: Back end databases
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupId: !Ref WebSG
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3eaf1acb-f3e4-43e9-985b-04ba7f3fea31
  MyALB:
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets:
        - !Ref Subnet1
        - !Ref Subnet2
      SecurityGroups:
        - !Ref WebSG
  MyALBTargetGroup:    
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      HealthCheckPath: /healthy.html
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      Name: MyALBTargetGroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref MyVPC
  MediaAssets:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: albertocuesta-media-assets
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4c36fbbd-21cc-4ef2-a3c6-8c8c9bda2859
  MyInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties: {}
  MyVPNGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties: 
      InternetGatewayId: !Ref MyInternetGateway
      VpcId: !Ref MyVPC
  WordpressCode:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: albertocuesta-wordpress-code
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b231a9ba-118e-4556-b2f7-ada6a768b920
